sppparse/src/tests/snapshots/sppparse__tests__save_file__save_change_type.snap
---
source: sppparse/src/tests/save_file.rs
expression: "&val"
---
{
  "hello": "world",
  "key1": "hello_world"
}
