sppparse/src/tests/snapshots/sppparse__tests__save_file__save_change_type2.snap
---
source: sppparse/src/tests/save_file.rs
expression: "&val"
---
{
  "hello": "world",
  "key1": {
    "$ref": "#/hello"
  }
}
