sppparse/src/tests/snapshots/sppparse__tests__save_file__save_multiple_files-3.snap
---
source: sppparse/src/tests/save_file.rs
expression: "&val"
---
{
  "hello": "woaw",
  "key1": {
    "$ref": "file2.json#/key1"
  }
}
