sppparse/src/tests/snapshots/sppparse__tests__save_file__save_multiple_files.snap
---
source: sppparse/src/tests/save_file.rs
expression: "&val"
---
{
  "hello": "world",
  "key1": {
    "$ref": "file2.json#/list/2"
  }
}
